# auctor-app

./: .env.example  .gitignore  ENGINEERING-WAVES.md  HANDOFF-github-integration.md  PRODUCT-SLICES.md  README.md  docker-compose.yaml  pyproject.toml
.agent/: agency.yaml
.agent/prompts/: manager.md
.agent/tools/: auctor_tools.py
.github/workflows/: ci.yml  publish.yml
coolify/: .env.production.example
docker/: auctor-scheduler.cron  frontend.Dockerfile  nginx.conf  service.Dockerfile
frontend/: .gitkeep.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  started.css  styles.css
frontend/src/api/: client.ts
integrations/hermes/: agency_mcp.py  config.example.yaml
schemas/: source-signal.schema.json
service/app/: config.py  conversations.py  db.py  demo.py  main.py  metrics_aggregations.py  models.py  onboarding.py  session.py  x_integration.py
service/auctor/: __init__.py  config.py  github_auth.py  memory.py  models.py  runner.py  scheduler.py  workflow.py
service/tests/: _fake_mongo.py  live_hermes_workflow_smoke.py  test_collectors.py  test_cron_to_content_job_integration.py  test_github_auth.py  test_hermes_mcp.py  test_linkup_api.py  test_metrics.py  test_onboarding.py  test_recent_data.py  test_scheduler.py  test_workflow_persistence.py
tests/: test_agent_domain_pack.py  test_auctor_tools.py  test_auth_routes.py  test_conversations.py  test_conversations_routes.py  test_demo.py  test_health.py  test_metrics_routes.py  test_posts_routes.py  test_session.py  test_x_integration.py  test_x_oauth_routes.py
(+68 files in other folders)
